# extrasafe

./: Cargo.toml
examples/: ipc_server_with_database.rs  isolate_test.rs
extrasafe/: Cargo.toml  README.md
extrasafe/examples/: isolate_test.rs  user_guide_isolate.rs
extrasafe/src/: basic_ruleset.rs  lib.rs  macros.rs  yes_really.rs
extrasafe_rulesets/: Cargo.toml  README.md
extrasafe_rulesets/examples/: ipc_server_with_database.rs  isolate_test.rs  network_server.rs  no_files_allow_stdout.rs  server_with_database.rs  simple_network.rs  time.rs  user-guide.rs
extrasafe_rulesets/src/: danger_zone.rs  lib.rs  network.rs  pipes.rs  systemio.rs  time.rs
extrasafe_rulesets/tests/: arg_comparisons.rs  bad_combination.rs  default_deny.rs  inherit_filters.rs  landlock_allthreads_fail.rs  landlock_basic.rs  landlock_conflicts.rs  multiple_conditions.rs  multiple_filters.rs  network.rs  open_readonly.rs  ruleset_union.rs  sleep.rs  test_ref_ruleset.rs  tests_can_fail.rs  thread_multi.rs  thread_single.rs  use_fd.rs
src/: error.rs  landlock.rs  lib.rs
src/builtins/: allow.rs  basic.rs  danger_zone.rs  kill.rs  mod.rs  network.rs  pipes.rs  systemio.rs  time.rs  truncate.rs  user_id.rs
src/builtins/network/: mod.rs  netlink.rs  socket_pair.rs
src/isolate/: isolate_sys.rs  mod.rs
tests/: sleep.rs  tests_can_fail.rs
