[workspace]
members = [
  "extrasafe",
  "extrasafe_rulesets"
]
resolver = "2"

[workspace.package]
version = "0.5.1"
authors = [
  "Harry Stern <harry@harrystern.net>",
]
edition = "2021"
rust-version = "1.74.0"
repository = "https://github.com/boustrophedon/extrasafe"
license = "MIT"
categories = [ "os::linux-apis" ]

[workspace.package.metadata.docs.rs]
all-features = true

[workspace.dependencies]
bytes = "^1"
crossbeam = "^0.8"
crossbeam-queue = "^0.3"
crossbeam-channel = "^0.5"
landlock = "^0.3"
libc = "^0.2"
rusqlite = "^0.32"
tempfile = "^3"
tokio = "^1.15"
warp = "^0.3"

[workspace.dependencies.extrasafe]
path = "./extrasafe"

[workspace.dependencies.hyper]
version = "^0.14"
features = [ "http1", "server", "runtime", "tcp" ]

[workspace.dependencies.reqwest]
version = "^0.11"
default-features = false

[workspace.dependencies.seccompiler]
version = "^0.4"
default-features = false

[workspace.dependencies.syscalls]
version = "^0.6"
default-features = false
